@@ -41,6 +41,8 @@ Release ...
   previous value as "\s0" does.
 * [nt]roff: Arbitrary delimiters are now allowed with "\s''" escape
   sequences.
+* troff: Fixed a bug that caused ".shift" without arguments to be ignored
+  if the last previous numerical expression was invalid.
 * troff: The indent of the current line is no longer part of a PDF link
   that continues from the previous line.
 * troff, dpost: The short font name is now part of the "x font" commands
